# aws-lambda-web-adapter

./: .dockerignore  .gitallowed  .gitattributes  .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.builder  Dockerfile.mac  Dockerfile.x86  LICENSE  Makefile  README.md  SECURITY.md  cliff.toml  commitlint.config.js  rustfmt.toml  template-arm64.yaml  template-x86_64.yaml
.cargo/: config
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: benchmark-comment.yaml  benchmark.yaml  changelog.yaml  cn-gamma.json  cn-prod.json  commitlint.yaml  docs.yaml  examples.yaml  gamma.json  merge.yaml  pipeline.yaml  pipeline.yml  pr.yaml  prod.json  release.yaml  security_audit.yaml
benches/: e2e_body_forwarding.rs
benches/common/: mod.rs
docs/: design.md  development.md
docs/guide/: book.toml
examples/aspnet-mvc/: AspNetLambdaWebAdapter.sln  README.md  template.yaml
examples/aspnet-mvc-zip/: AspNetLambdaZipWebAdapter.sln  README.md  template.yaml
examples/aspnet-webapi-zip/: AspNetWebApiZip.sln  README.md  template.yaml
examples/bedrock-agent-fastapi/: README.md  template.yaml
examples/bedrock-agent-fastapi-zip/: README.md  template.yaml
examples/bun-graphql-streaming-zip/: README.md  template.yaml
examples/bun-graphql-zip/: README.md  template.yaml
examples/datadog/: README.md
examples/datadog-zip/: README.md
examples/deno-zip/: README.md  template.yaml
examples/expressjs/: README.md  template.yaml
examples/expressjs-zip/: .gitignore  README.md  template.yaml
examples/fastapi/: README.md  template.yaml
examples/fastapi-backend-only-response-streaming/: README.md
examples/fastapi-background-tasks/: README.md  template.yaml
examples/fastapi-cicd/: .gitignore  Dockerfile  README.md  pyproject.toml  template.yaml
examples/fastapi-cicd/.github/workflows/: test.yml
examples/fastapi-cicd/app/: main.py
examples/fastapi-cicd/tests/: conftest.py  test_functional.py
examples/fastapi-https/: README.md  template.yaml
examples/fastapi-response-streaming/: .gitignore  README.md  template.yaml
examples/fastapi-response-streaming-lmi/: README.md  template.yaml
examples/fastapi-response-streaming-zip/: README.md  template.yaml
examples/fastapi-zip/: README.md  template.yaml
examples/fasthtml/: README.md  template.yaml
examples/fasthtml-response-streaming/: README.md  template.yaml
examples/fasthtml-response-streaming-zip/: README.md  template.yaml
examples/fasthtml-zip/: README.md  template.yaml
examples/fastmcp/: README.md  template.yaml
examples/fastmcp-zip/: README.md  template.yaml
examples/flask/: .gitignore  README.md  template.yaml
examples/flask-zip/: README.md  template.yaml
examples/gin/: README.md  template.yaml
examples/gin-zip/: .gitignore  README.md  template.yaml
examples/go-http-zip/: README.md  go.mod  template.yml
examples/go-httpbin/: README.md
examples/go-httpbin-zip/: template.yaml
examples/gradio/: .gitignore
examples/javalin-zip/: README.md  template.yaml
examples/laravel/: Dockerfile  README.md  docker-compose.yml  template.yaml
examples/laravel-zip/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  template.yaml
examples/nextjs/: README.md  template.yaml
examples/nextjs-response-streaming/: .dockerignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  run.sh  tailwind.config.js  template.yaml
examples/nextjs-response-streaming-container/: next.config.js  package-lock.json  package.json  template.yaml
examples/nextjs-streaming-response/: .gitignore  Dockerfile  README.md  package-lock.json  template.yaml
examples/nextjs-zip/: README.md  template.yaml
examples/nginx/: .gitignore  Dockerfile  README.md  docker-compose.yml  template.yaml
examples/nginx-snapstart-zip/: README.md  template.yaml
examples/nginx-zip/: .gitignore  Makefile  README.md  bootstrap  template.yaml
examples/nginx-zip-snapstart/: README.md  template.yaml
examples/php/: .gitignore  Dockerfile  README.md  X86_64.Dockerfile  arm64.Dockerfile  bootstrap  docker-compose.yml  template.yaml
examples/php-snapstart-zip/: Dockerfile  Makefile  README.md  build.sh  dev.sh  docker-compose.yml  template.yaml
examples/php-zip/: Dockerfile  Makefile  README.md  bootstrap  docker-compose.yml  template.yaml
examples/php-zip-snapstart/: .gitignore  README.md  template.yaml
examples/remix/: .gitignore  Dockerfile  README.md  template.yaml
examples/remix-zip/: Makefile  README.md  run.sh  template.yaml
examples/rust-actix-web-zip/: .gitignore  README.md  template.yaml
examples/rust-axum-https-zip/: README.md  template.yaml
examples/rust-axum-https-zip/rust_app/: Cargo.toml  Makefile
examples/rust-axum-https-zip/rust_app/src/: main.rs
examples/rust-axum-zip/: .gitignore  Cargo.toml  Makefile  README.md  template.yaml
examples/serverless-nestjs/: README.md  pnpm-lock.yaml  serverless.yml
examples/sinatra/: .gitignore  README.md  template.yml
examples/springboot/: .gitignore  README.md  template.yaml
examples/springboot-response-streaming-zip/: .gitignore  .java-version  README.md  template.yaml
examples/springboot-zip/: README.md  template.yaml
examples/sqs-expressjs/: README.md  template.yaml
examples/sveltekit-ssr-zip/: README.md  build.sh  template.yaml
examples/symfony/: .gitignore  Dockerfile  README.md  (+2 more)
examples/symfony-zip/: Dockerfile  Makefile  README.md  template.yaml
layer/: bootstrap
src/: lib.rs  main.rs  readiness.rs
tests/: integ_tests.rs
(+333 files in other folders)
