[package]
name = "lambda_web_adapter"
version = "0.7.2"
authors = [
    "Harold Sun <sunhua@amazon.com>",
    "David Calavera <dcalaver@amazon.com>",
]
edition = "2021"
description = "Run web applications on AWS Lambda"
keywords = ["AWS", "Lambda", "APIGateway", "ALB", "API"]
license = "Apache-2.0"
homepage = "https://github.com/awslabs/aws-lambda-web-adapter"
repository = "https://github.com/awslabs/aws-lambda-web-adapter"
documentation = "https://docs.rs/lambda_web_adapter"
categories = ["web-programming::http-server"]
readme = "README.md"
exclude = ["examples"]

[dependencies]
http = "0.2"
hyper = { version = "0.14", features = ["client"] }
lambda_http = "0.8.3"
serde_json = "1.0"
tokio = { version = "1.29", features = [
    "macros",
    "io-util",
    "sync",
    "rt-multi-thread",
    "time",
] }
tokio-retry = "0.3"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
] }
tower = "0.4"
tower-http = { version = "0.4", features = ["compression-gzip"] }
url = "2.3"

[dev-dependencies]
flate2 = "1.0.25"
httpmock = "0.6.8"
http-body-util = "0.1.0-rc.2"
http-body = "0.4.5"
hyper-rustls = "0.24"
aws-sigv4 = "0.56.1"

[[bin]]
name = "lambda-adapter"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1