[package]
name = "lambda_web_adapter"
version = "0.8.4"
authors = [
    "Harold Sun <sunhua@amazon.com>",
    "David Calavera <dcalaver@amazon.com>",
]
edition = "2021"
description = "Run web applications on AWS Lambda"
keywords = ["AWS", "Lambda", "APIGateway", "ALB", "API"]
license = "Apache-2.0"
homepage = "https://github.com/awslabs/aws-lambda-web-adapter"
repository = "https://github.com/awslabs/aws-lambda-web-adapter"
documentation = "https://docs.rs/lambda_web_adapter"
categories = ["web-programming::http-server"]
readme = "README.md"
exclude = ["examples"]

[dependencies]
bytes = "1.5.0"
http = "1.0"
http-body = "1.0.0"
hyper = { version = "1.0", features = ["client"] }
hyper-util = "0.1.2"
lambda_http = { version = "0.9.3", default-features = false, features = [
    "apigw_http",
    "apigw_rest",
    "alb",
    "pass_through",
] }
serde_json = "1.0"
tokio = { version = "1.35", features = [
    "macros",
    "io-util",
    "sync",
    "rt-multi-thread",
    "time",
] }
tokio-retry = "0.3"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
] }
tower = "0.4"
tower-http = { version = "0.5", features = ["compression-gzip"] }
url = "2.3"

[dev-dependencies]
flate2 = "1.0.25"
httpmock = "0.7.0"
http-body-util = "0.1.0"
http-body = "1.0"
hyper-rustls = "0.26"
aws-sigv4 = "1.1.6"
aws-credential-types = "1.1"
percent-encoding = "2.3.0"

[[bin]]
name = "lambda-adapter"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1