[package]
name = "rust-axum-https-zip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.8"
axum-server = { version = "0.4.6", features = ["tls-rustls"] }
tokio = { version = "1.20.4", features = ["full"] }

[profile.release]
strip = true
